Replay the generics patch, the fix for the reported bug is nexted.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@713573 13f79535-47bb-0310-9956-ffa450edef68